--- a/京东/sort.html
+++ b/京东/sort.html
@@ -17,7 +17,7 @@
          <ul>
              <li><a href="index.html"><i class="fa fa-home"></i><span>首页</span></a></li>
              <li><a href="sort.html" class="active"><i class="fa fa-list-ul"></i><span>分类</span></a></li>
-             <li><a href=""><i class="fa fa-ravelry"><i class="hot"></i></i><span>觅Me</span></a></li>
+             <li><a href="mi.html"><i class="fa fa-ravelry"><i class="hot"></i></i><span>觅Me</span></a></li>
              <li><a href=""><i class="fa fa-shopping-cart"></i><span>购物车</span></a></li>
              <li><a href=""><i class="fa fa-user-o"></i><span>我的</span></a></li>
          </ul>
@@ -122,7 +122,8 @@
 <div id="top"></div>
     
 
-    
+<div id="guan"></div>    
+<div id="mi1"></div>    
 <div id="shop"></div>    
 <!--  链接的 所有 js -->
 <script src="js/vue.js"></script>
