--- a/折800/index.html
+++ b/折800/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="shouye">
 <!-- 首页-->
-    <a href="" class="z800"><img src="img/shouye/800.png" alt=""></a>
+    <a href="#" class="z800"><img src="img/shouye/800.png" alt=""></a>
 <!--   底部导航 部分-->
     <nav>
          <ul>
@@ -22,6 +22,22 @@
          </ul>
      </nav> 
      
+
+
+
+
+<!-------红包的 弹出框------->
+<div id="ad">
+    <div class="x">X</div>
+    <div class="div3 div5"><img src="img/2.png" alt=""></div>
+    <div class="div1 div5"><img src="img/1.png" alt=""></div>
+    <div class="div2"><span id="close">立即领取 </span></div>
+    <div class="div4 div5"><img src="img/3.png" alt=""></div>
+</div>
+
+
+
+
 
 <!---- 搜索框 部分--->
      <div class="search container">
